# Planning-Rail-Interface

./: .env.example  .vercelignore  README.md  architecture.md  pyproject.toml  requirements.txt  setup.py
api/: index.py
app/: main.py
app/adapters/: base.py  mock_planning.py  mock_rail.py
app/core/: config.py
app/schemas/: api.py
app/services/: ingestion.py
app/templates/: match_detail.html
app/utils/: geospatial.py
app/workers/: scheduler.py
docker/: Dockerfile  docker-compose.yml
migrations/: 001_init.sql
sample_data/: planning_applications.json  railway_features.json  sample_alert_output.json
src/app/: main.py
src/app/api/: routes.py
src/app/models/: entities.py
src/app/services/: alerts.py  matching.py  review.py
src/app/templates/: matches.html
tests/: conftest.py  test_api.py  test_geospatial.py  test_ingestion.py  test_matching.py
