[project]
name = "railway-planning-proximity-monitor"
version = "0.1.0"
description = "MVP for monitoring planning applications near railway assets"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "alembic>=1.13.2",
  "shapely>=2.0.5",
  "pyproj>=3.6.1",
  "python-dotenv>=1.0.1",
  "jinja2>=3.1.4",
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["docker*", "migrations*", "sample_data*", "tests*", "api*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
